# dask-noop

./: .gitignore  README.md  pyproject.toml
dask_noop/: __init__.py  dask_noop.py
