[tool.poetry]
name = "dask-noop"
version = "0.1.0"
description = "Duplicate a dask graph, replacing all functions with no-ops"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dask = {extras = ["delayed"], version = "^2021.4.0"}

[tool.poetry.dev-dependencies]
shed = "^0.3.4"
flake8 = "^3.9.1"
ipython = "^7.22.0"
dask = {extras = ["complete"], version = "^2021.4.0"}
graphviz = "^0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
